# skill-manager

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: agents.rs  marketplace.rs  mod.rs  scanner.rs  skills.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/sync/: mod.rs
src/components/: MarkdownPreview.tsx  MarketplaceCard.tsx
src/components/ui/: Button.tsx  Card.tsx  ErrorBoundary.tsx  FileTree.tsx  Modal.tsx  Spinner.tsx
src/context/: ThemeContext.tsx  ToastContext.tsx
src/lib/: api.ts
src/pages/: AgentsPage.tsx  Dashboard.tsx  MarketplacePage.tsx  SkillDetail.tsx  SkillsPage.tsx
src/types/: index.ts
